<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd" />

        <EditText
            android:id="@+id/mi_edtext1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/old_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/mi_edtext2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/new_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/mi_edtext3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:hint="@string/new_repwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_name" />

        <EditText
            android:id="@+id/mi_edtext4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:hint="@string/nname_hint"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/mi_btnok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_bg"
        android:gravity="center_vertical"
        android:text="@string/Ensure"
        android:textSize="16sp" />

</LinearLayout>