<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/main_top" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/nmitem" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="40dp"
                android:text="@string/zs01" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/zhitem" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/zs01" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/cyitem" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="40dp"
                android:text="@string/zs02" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ysitem" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="40dp"
                android:text="@string/zs03" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/zsitem" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/zs02" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/jritem" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="40dp"
                android:text="@string/zs04" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/lxitem" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="40dp"
                android:text="@string/zs05" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/top_bg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="12dp" >

        <TextView
            android:id="@+id/zs_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/names" />

        <EditText
            android:id="@+id/zs_edname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/zs_name"
            android:background="@null"
            android:hint="@string/name_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/zs_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_name"
            android:layout_marginTop="5dp"
            android:text="@string/tel" />

        <EditText
            android:id="@+id/zs_edtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_name"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/zs_tel"
            android:background="@null"
            android:hint="@string/tel_hint"
            android:imeOptions="actionNext"
            android:inputType="numberSigned"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/zs_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_tel"
            android:layout_marginTop="5dp"
            android:text="@string/mail" />

        <EditText
            android:id="@+id/zs_edmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_tel"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/zs_mail"
            android:background="@null"
            android:hint="@string/mail_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/zs_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_mail"
            android:layout_marginTop="5dp"
            android:text="@string/msg" />

        <EditText
            android:id="@+id/zs_edmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zs_mail"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/zs_msg"
            android:background="@null"
            android:hint="@string/msg_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/zs_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/mediumaquamarine"
        android:padding="8dp"
        android:text="@string/subject"
        android:textColor="@color/white"
        android:windowSoftInputMode="stateVisible|adjustResize" />

</LinearLayout>