<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusableInTouchMode="false"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/more_zhaoshang"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/click_bg"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:src="@drawable/cye" />

            <TextView
                android:id="@+id/more_weixin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/click_bg"
                android:gravity="center_vertical"
                android:text="@string/weixin" />

            <TextView
                android:id="@+id/more_weibo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:text="@string/weibo" />

            <TextView
                android:id="@+id/more_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/click_bg"
                android:gravity="center_vertical"
                android:text="@string/cache" />

            <LinearLayout
                android:id="@+id/more_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <TextView
                    android:id="@+id/more_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/top_bg" />

            <TextView
                android:id="@+id/more_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/click_bg"
                android:gravity="center_vertical"
                android:text="@string/about" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:text="@string/compt"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/code" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>