<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/itembg"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/list"
        android:textSize="16.0sp" />

    <ListView
        android:id="@+id/xp_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:paddingLeft="38.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/itembg"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/xiaopiao"
            android:textColor="@color/dimgray"
            android:textSize="16.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:background="@drawable/itembg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="55dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/xp_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/tomato" />

            <TextView
                android:id="@+id/xp_zheke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/tomato" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:background="@drawable/itembg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="55dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/xp_sunprice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/tomato" />

            <TextView
                android:id="@+id/xp_dingjin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/tomato" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/huise"
            android:gravity="top"
            android:paddingBottom="5.0dip"
            android:paddingLeft="50.0dip"
            android:paddingTop="3dp"
            android:text="@string/beizhu"
            android:textColor="@color/dimgray"
            android:textSize="10.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/varbg"
            android:gravity="center_vertical"
            android:paddingLeft="53dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/names"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/xp_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/name_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/itembg"
            android:gravity="center_vertical"
            android:paddingLeft="50dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/xp_tel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tel_hint"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/huise"
            android:paddingBottom="3dp"
            android:paddingLeft="50dp"
            android:paddingTop="3dp"
            android:text="@string/sming"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/xp_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/click_bg"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/go"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>